--- a/react-portfolio/src/App.scss
+++ b/react-portfolio/src/App.scss
@@ -1,20 +1,20 @@
-$primary-color: #00E5FF;
+$primary-color: #ffd700;
 
 @import 'animate.css';
 
 @font-face {
   font-family: 'Helvetica Neue';
-  src: irl('./assets/fonts/helvetica-neu.ttf') format('ttf');
+  src: url('./assets/fonts/helvetica-neu.ttf') format('ttf');
 }
 
 @font-face {
-  font-family: 'La Belle Aurure';
-  src: irl('./assets/fonts/LaBelleAurure.woff2') format('woff2');
+  font-family: 'La Belle Aurore';
+  src: url('./assets/fonts/LaBelleAurore.woff2') format('woff2');
 }
 
 @font-face {
   font-family: 'Coolvetica';
-  src: irl('./assets/fonts/Coolvetica.woff2') format('woff2');
+  src: url('./assets/fonts/CoolveticaRg-Regular.woff2') format('woff2');
 }
 
 input, textarea {
