--- a/react-portfolio/src/App.scss
+++ b/react-portfolio/src/App.scss
@@ -3,8 +3,8 @@ $primary-color: #ffd700;
 @import 'animate.css';
 
 @font-face {
-  font-family: 'Helvetica Neue';
-  src: url('./assets/fonts/helvetica-neu.ttf') format('ttf');
+  font-family: 'Helvetica-Neue';
+  src: url('./assets/fonts/HelveticaNeue.ttf') format('ttf');
 }
 
 @font-face {
@@ -18,5 +18,5 @@ $primary-color: #ffd700;
 }
 
 input, textarea {
-  font-family: 'Helvetica Neue';
+  font-family: 'Helvetica-Neue';
 }
