--- a/react-portfolio/src/components/Sidebar/index.scss
+++ b/react-portfolio/src/components/Sidebar/index.scss
@@ -40,6 +40,7 @@
             height: 51px;
             position: relative;
             text-decoration: none;
+            font-family: 'Coolvetica';
 
             i {
                 transition: all 0.3s ease-out;
@@ -92,6 +93,36 @@
         a.contact-link {
             &:after {
                 content: 'CONTATO';
+            }
+        }
+
+        a.active {
+            svg {
+                color: #ffd700
+            }
+        }
+    }
+
+    ul {
+        position: absolute;
+        bottom: 20px;
+        width: 100%;
+        display: block;
+        padding: 0%;
+        list-style: none;
+        text-align: center;
+        margin: 0;
+
+        li {
+            a {
+                padding: 7px 0;
+                display: block;
+                font-size: 15px;
+                line-height: 16px;
+              
+                &:hover svg {
+                    color:#ffd700;
+                }
             }
         }
     }
