--- a/react-portfolio/src/components/Sidebar/index.scss
+++ b/react-portfolio/src/components/Sidebar/index.scss
@@ -84,7 +84,7 @@
             }
         }
 
-        a.gallery-link {
+        a.portfolio-link {
             &:after {
                 content: 'PROJETOS';
             }
