--- a/react-portfolio/src/components/Layout/index.scss
+++ b/react-portfolio/src/components/Layout/index.scss
@@ -3,12 +3,6 @@
     height: 100%;
     position: absolute;
 }
-
-.page {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-  }
   
   .top-tags {
     bottom: auto;
@@ -44,49 +38,42 @@
     animation-delay: 1s;
   }
 
-  .about-page, .contact-page {
-    .text-zone{
-      position: absolute;
-      left: 10%;
-      top: 50%;
-      transform: translateY(-50%);
-      width: 35%;
-      vertical-align: middle;
-      display: table-cell;
-      max-height: 90%;
-
-      h1 {
-        font-size: 53px;
-        font-family: 'Coolvetica';
+  .container.about-page, 
+  .container.contact-page, 
+  .container.portfolio-page {
+    h1 {
+      font-size: 53px;
+      font-family: 'Coolvetica';
+      color: #ffd700;
+      font-weight: 400;
+      margin-top: 0;
+      position: relative;
+      margin-bottom: 40px;
+      left: 10px;
+      
+      &::before{
+        content: '<h1>';
+        font-family: 'La belle Aurore';
+        font-size: 18px;
+        position: absolute;
+        margin-top: -10px;
+        left: -10px;
+        opacity: 0.6;
+        line-height: 18px;
+      }
+      
+      &::after {
+        content: '<h1/>';
+        font-family: 'La belle Aurore';
         color: #ffd700;
-        font-weight: 400;
-        margin-top: 0;
-        position: relative;
-        margin-bottom: 40px;
-        left: 10px;
-
-        &::before{
-          content: '<h1>';
-          font-family: 'La belle Aurore';
-          font-size: 18px;
-          position: absolute;
-          margin-top: -10px;
-          left: -10px;
-          opacity: 0.6;
-          line-height: 18px;
-        }
-
-        &::after {
-          content: '<h1/>';
-          font-family: 'La belle Aurore';
-          font-size: 18px;
-          line-height: 18px;
-          position: absolute;
-          left: -30px;
-          bottom: -20px;
-          margin-left: 20px;
-          opacity: 0.6;
-
+        font-size: 18px;
+        line-height: 18px;
+        position: absolute;
+        left: -30px;
+        bottom: -20px;
+        margin-left: 20px;
+        opacity: 0.6;
+          
         }
       }
 
@@ -97,7 +84,6 @@
         font-weight: 300;
         min-width: fit-content;
         animation: pulse 1s;
-
         &:nth-of-type(1){
           animation-delay: 1.1s;
         }
@@ -108,8 +94,19 @@
           animation-delay: 1.3s;
         }
       }
-    }
+      
 
+
+      .text-zone {
+        position: absolute;
+        left: 10%;
+        top: 50%;
+        transform: translateY(-50%);
+        width: 35%;
+        vertical-align: middle;
+        display: table-cell;
+        max-height: 90%;
+      }
 
     .text-animate-hover {
       &:hover {
