--- a/react-portfolio/src/components/Portfolio/index.scss
+++ b/react-portfolio/src/components/Portfolio/index.scss
@@ -46,6 +46,13 @@
                 rgba(0, 0, 0, 1)
             );
             bottom: -70px;
+
+            h4{
+                font-family: 'Coolvetica';
+                font-size: 18px;
+                font-weight: 200;
+            }
+            
         }
 
         .title {
@@ -80,7 +87,6 @@
             transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
             cursor: pointer;
 
-            
         }
 
         .btn:hover {
@@ -101,11 +107,10 @@
             z-index: 2;
             transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
             opacity: 0;
-            filter: blur(15px);
         }
 
         &:hover:after {
-            opacity: 0.85;
+            opacity: 0.90;
         }
 
         &:hover .content {
