--- a/react-portfolio/src/components/Contact/index.scss
+++ b/react-portfolio/src/components/Contact/index.scss
@@ -43,6 +43,7 @@
       padding: 0 20px;
       box-sizing: border-box;
       font-family: 'Coolvetica';
+      font-size: 18px;
       
     }
   
