--- a/react-portfolio/src/components/Layout/index.scss
+++ b/react-portfolio/src/components/Layout/index.scss
@@ -84,6 +84,8 @@
         font-weight: 300;
         min-width: fit-content;
         animation: pulse 1s;
+        font-size: 18px;
+
         &:nth-of-type(1){
           animation-delay: 1.1s;
         }
