--- a/react-portfolio/src/components/Layout/index.scss
+++ b/react-portfolio/src/components/Layout/index.scss
@@ -84,7 +84,7 @@
         font-weight: 300;
         min-width: fit-content;
         animation: pulse 1s;
-        font-size: 18px;
+        font-size: 1.30rem;
 
         &:nth-of-type(1){
           animation-delay: 1.1s;
