--- a/react-portfolio/src/components/Portfolio/index.scss
+++ b/react-portfolio/src/components/Portfolio/index.scss
@@ -49,7 +49,7 @@
 
             h4{
                 font-family: 'Coolvetica';
-                font-size: 18px;
+                font-size: 1.25rem;
                 font-weight: 200;
             }
             
@@ -79,7 +79,7 @@
             line-height: 34px;
             border: 2px solid #ffd700;
             border-radius: 4px;
-            font-size: 14px;
+            font-size: 1.10rem;
             color: #fff;
             background: transparent;
             text-transform: uppercase;
